--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "api.derlung.com",
-  "version": "1.0.0",
+  "name": "derlung-api",
+  "version": "1.0.2",
   "description": "",
   "main": "src/server.js",
   "scripts": {
